adjust font weight for our vision section to improve the contrast between title and paragraph (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -416,7 +416,7 @@ hr{
 .about-content p{
   max-width: 600px;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 200;
   color: #000;
   line-height: 30px;
 }
